# qr-code

./: LICENSE  README.md
api/: Dockerfile  pyproject.toml
api/src/: app.py  config.py  security_utils.py  utils.py
api/src/models/: QRInfo.py  UserAuth.py
